GridView: Show favorites icon in game covers for games marked as favorite. Can be enabled or disabled via ThemeModifier extension

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -14,6 +14,7 @@
     <sys:Boolean x:Key="GridViewShowHltbDataGrid">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewEnableCoverShineAnimation">true</sys:Boolean>
     <sys:Boolean x:Key="DetailsViewLibraryGameShowFavorite">true</sys:Boolean>
+    <sys:Boolean x:Key="GridViewLibraryGameShowFavorite">true</sys:Boolean>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
