Library: Collapse window ImageBackground by default

--- a/source/Views/Library.xaml
+++ b/source/Views/Library.xaml
@@ -21,6 +21,7 @@
 
                         <FadeImage x:Name="PART_ImageBackground"
                                    Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+                                   Visibility="Collapsed"
                                    HorizontalAlignment="Center" VerticalAlignment="Top" />
 
                         <TopPanel DockPanel.Dock="Top" Grid.Row="0" />
