--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -16,6 +16,7 @@
     <sys:Boolean x:Key="DetailsViewLibraryGameShowFavorite">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewLibraryGameShowFavorite">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewDisplayGameNameIfLogoVisible">True</sys:Boolean>
+    <Visibility x:Key="GridViewCoverSubtitleVisibility">Collapsed</Visibility>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
@@ -381,5 +382,7 @@
     <SolidColorBrush x:Key="OpaqueHighlightBrush" Color="{DynamicResource GlyphSubColor}" Opacity="0.5"/>
     <SolidColorBrush x:Key="OpaqueHighlightBrushBright" Color="{DynamicResource GlyphColor}" Opacity="0.5"/>
     <SolidColorBrush x:Key="OpaqueGrayHighlightBrush" Color="#4c919191" />
-    
+
+    <SolidColorBrush x:Key="GridViewCoverSubtitleBrush" Color="#b7b7b7" />
+    <SolidColorBrush x:Key="GridViewCoverSubtitleBackgroundBrush" Color="#3d4450" />
 </ResourceDictionary>
