GridView: Prevent video section from changing height while ExtraMetadataLoader extension video is loading

--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -269,7 +269,13 @@
                                             <TextBlock Text="{DynamicResource LOCExtra_Metadata_Loader_VideoLabel}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
                                             <Separator Background="{DynamicResource PanelSeparatorBrush}" Margin="0,5,0,5" />
-                                            <ContentControl x:Name="ExtraMetadataLoader_VideoLoaderControl" />
+                                            <Grid>
+                                                <!--Rectangle used to expand the panel while the video loads-->
+                                                <Viewbox Stretch="Uniform" Visibility="{Binding ElementName=VideoFeed, Path=Visibility}">
+                                                    <Rectangle Width="16" Height="9" Fill="Transparent" IsHitTestVisible="False" />
+                                                </Viewbox>
+                                                <ContentControl x:Name="ExtraMetadataLoader_VideoLoaderControl" />
+                                            </Grid>
                                         </StackPanel>
                                         <!--#endregion -->
                                         
